fix: 替换 Java 9-11 API 保证 Java 8 运行时兼容 / Replace Java 9-11 APIs for Java 8 runtime compatibility
- SqliteDatabase: String.isBlank() → trim().isEmpty()
- WebSearchProvider: Map.of() → LinkedHashMap + put()
- AgentPluginManager: Files.readString() → FileUtil.readString()
- 编译 target=8 通过，全量测试通过

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>